
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/mainLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_particles"
    android:padding="16dp">



    <!-- כותרת כללית למסך -->
    <TextView
        android:id="@+id/reservationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reservation_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:shadowColor="#808080"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- כותרת עבור פרטים אישיים -->
    <TextView
        android:id="@+id/personalDetailsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal_details_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/reservationTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- שדה שם מלא -->
    <EditText
        android:id="@+id/fullNameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:hint="@string/full_name_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#3E2723"
        android:gravity="start|center_vertical"
        android:layoutDirection="locale"
        android:textDirection="locale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/personalDetailsTitle"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- שדה מספר טלפון -->
    <EditText
        android:id="@+id/phoneInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:hint="@string/phone_number_hint"
        android:inputType="phone"
        android:layoutDirection="locale"
        android:textDirection="locale"
        android:minHeight="48dp"
        android:textColorHint="#212121"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fullNameInput"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- שדה אימייל -->
    <EditText
        android:id="@+id/emailInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:hint="@string/email_address_hint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#000000"
        android:textDirection="locale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneInput"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- כותרת עבור פרטי ההזמנה -->
    <TextView
        android:id="@+id/reservationDetailsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/reservation_details_title"
        android:textColor="#263238"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailInput" />

    <!-- כפתור בחירת תאריך -->
    <Button
        android:id="@+id/datePickerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/primary"
        android:text="@string/pick_date_button"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reservationDetailsTitle" />

    <!-- כפתור בחירת שעה -->
    <Button
        android:id="@+id/timePickerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/primary"
        android:text="@string/pick_time_button"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/datePickerButton" />

    <!-- Spinner לכמות אנשים -->
    <Spinner
        android:id="@+id/numberOfPeopleSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/timePickerButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Spinner למקום ישיבה מועדף -->
    <Spinner
        android:id="@+id/seatingPreferenceSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/numberOfPeopleSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- כפתור שליחת הטופס -->

    <!-- כפתור חזרה -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:backgroundTint="@color/primary"
        android:elevation="8dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/submit_reservation_button"
        android:textColor="@color/black"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seatingPreferenceSpinner"
        tools:ignore="TextContrastCheck" />

    <!-- אנימציה -->
    <com.google.android.material.button.MaterialButton

        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="748dp"
        android:backgroundTint="@color/secondary"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/back_button"
        android:textColor="@color/black"
        app:cornerRadius="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/confirmationAnimation"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/submitButton"
        app:lottie_autoPlay="false"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/confirmation"
        tools:ignore="VisualLintBounds" />

    <Spinner
        android:id="@+id/paymentMethodSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/seatingPreferenceSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/paymentMethodSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/vegan_menu_question"
            android:textColor="#BDBDBD"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/veganSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
