
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    android:background="@drawable/card_background"
    android:layout_margin="8dp"
    android:elevation="4dp">

    <!-- תמונת המנה -->
    <ImageView
        android:id="@+id/dishImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/chickenburger" />



    <!-- פרטי המנה -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="16dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/dishName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_dish_name"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dishDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/default_dish_description"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <!-- מחיר המנה -->
    <TextView
        android:id="@+id/dishPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_dish_price"
        android:textSize="16sp"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_gravity="center" />


</LinearLayout>
